# opentera-webrtc

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  macos_get_version.cmake  requirements.txt
backend/: .gitignore  (+4 more)
examples/cpp-camera-stream-client/: AlsaPcmDevice.cpp  AlsaPcmDevice.h  CMakeLists.txt  README.md  main.cpp
examples/cpp-data-channel-client/: CMakeLists.txt  README.md  main.cpp
examples/cpp-data-channel-client-reliability-tests/: CMakeLists.txt  README.md  main.cpp  start_server.bash
examples/cpp-stream-client/: CMakeLists.txt  README.md  main.cpp
examples/cpp-video-stream-client/: .gitignore  CMakeLists.txt  README.md  main.cpp
opentera-webrtc-native-client/: .clang-format  .gitignore  CMakeLists.txt  README.md
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/: CMakeLists.txt  README.md
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/OpenteraWebrtcNativeGStreamer/: CMakeLists.txt  README.md  WIP_STATE.md
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/OpenteraWebrtcNativeGStreamer/include/: FactoryBuilders.h
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/OpenteraWebrtcNativeGStreamer/src/: FactoryBuilders.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/gstreamer/: CMakeLists.txt
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/gstreamer/include/: FactoryBuilders.h
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/gstreamer/src/: FactoryBuilders.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/include/OpenteraWebrtcNativeClient/: BlackHoleAudioCaptureModule.h  DataChannelClient.h  OpenteraAudioDeviceModule.h  RefCountedVideoSource.h  SignalingClient.h  SignallingClient.h  StreamClient.h  VideoSource.h  VideoStreamClient.h  WebrtcClient.h  version.h
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/python/: CMakeLists.txt
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/python/package/: CMakeLists.txt  MANIFEST.in.in  README.md.in  TargetFileNameOpenteraWebrtcNativeGStreamer.txt.in  __init__.py.in  post-process-doc.sh  post-process-stub.sh  setup.py.in  setup_gstreamer.py.in
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/python/src/: DataChannelClientPython.cpp  Json.cpp  SignalingClientPython.cpp  SignallingClientPython.cpp  SioMessage.cpp  StreamClientPython.cpp  VideoSourcePython.cpp  WebrtcClientPython.cpp  module.cpp  opentera_webrtc_native_client.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/python/test/: .gitignore  callback_awaiter.py  data_channel_client_test.py  failure_test_case.py  pytest.ini  requirements.txt  signaling_server_runner.py  socketio_inactive_client_test.py  start_tests.bash  stream_client_test.py  websocket_inactive_client_test.py
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/ros/: CMakeLists.txt  README.md
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/ros/include/: RosDataChannelBridge.h  RosSignalingServerconfiguration.h  RosTopicStreamer.h  RosVideoSource.h
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/ros/src/: RosSignalingServerConfiguration.cpp  RosTopicStreamer.cpp  RosVideoSource.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/: BlackHoleAudioCaptureModule.cpp  DataChannelClient.cpp  OpenteraAudioDeviceModule.cpp  SignalingClient.cpp  SignallingClient.cpp  StreamClient.cpp  VideoSource.cpp  VideoStreamClient.cpp  WebrtcClient.cpp  version.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Codecs/: VideoCodecFactories.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Configurations/: AudioSourceConfiguration.cpp  DataChannelConfiguration.cpp  SignalingServerConfiguration.cpp  SignallingServerConfiguration.cpp  VideoSourceConfiguration.cpp  VideoStreamConfiguration.cpp  WebrtcConfiguration.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Handlers/: DataChannelPeerConnectionHandler.cpp  PeerConnectionHandler.cpp  StreamPeerConnectionHandler.cpp  VideoStreamPeerConnectionHandler.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Signaling/: SignalingClient.cpp  SioSignalingClient.cpp  WebSocketSignalingClient.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Sinks/: AudioSink.cpp  EncodedVideoSink.cpp  VideoSink.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Sources/: AudioSource.cpp  RosVideoSource.cpp  VideoSource.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/Utils/: Client.cpp  Http.cpp  IceServer.cpp  thread.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/src/VideoEncoder/: ForceH264VideoEncoderFactory.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/test/: CMakeLists.txt
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/test/resources/: cert.pem  key.pem
opentera-webrtc-native-client/OpenteraWebrtcNativeClient/test/src/: CallbackAwaiter.cpp  DataChannelClientTests.cpp  StreamClientTests.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeGStreamer/: CMakeLists.txt  README.md  WIP_STATE.md
opentera-webrtc-native-client/OpenteraWebrtcNativeGStreamer/src/Codecs/: GStreamerVideoDecoder.cpp  H264GStreamerVideoDecoder.cpp  Vp8GStreamerVideoDecoder.cpp  Vp9GStreamerVideoDecoder.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeGStreamer/src/Decoders/: GStreamerVideoDecoder.cpp  H264GStreamerVideoDecoders.cpp  Vp8GStreamerVideoDecoders.cpp  Vp9GStreamerVideoDecoders.cpp
opentera-webrtc-native-client/OpenteraWebrtcNativeGStreamer/src/Encoders/: GStreamerVideoEncoder.cpp  H264GStreamerVideoEncoders.cpp  (+2 more)
opentera_webrtc_ros/: CMakeLists.txt  README.md  package.xml
opentera_webrtc_ros/include/: RosDataChannelBridge.h  RosSignalingServerconfiguration.h  RosStreamBridge.h  RosTopicStreamer.h  RosVideoSource.h
opentera_webrtc_ros/msg/: Peer.msg  PeerData.msg
opentera_webrtc_ros/src/: RosDataChannelBridge.cpp  RosSignalingServerConfiguration.cpp  RosStreamBridge.cpp  RosTopicStreamer.cpp  RosVideoSource.cpp
(+496 files in other folders)
