<?xml version="1.0"?>
<package format="2">
  <name>opentera_webrtc_ros</name>
  <version>1.0.0</version>
  <description>Provides Nodes to join a WebRTC call from ROS</description>

  <maintainer email="cedric.godin@usherbrooke.ca">Cédric Godin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/introlab/opentera-webrtc-teleop</url>
  <author email="cedric.godin@usherbrooke.ca">Cédric Godin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
